chore: update monospace css style to class

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, Courier New, monospace;
 }
 
-#monospace {
+.address {
   font-family: source-code-pro, Menlo, Monaco, Consolas, Courier New, monospace;
 }
 
