--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,10 @@ a {
   color: inherit;
 }
 
+.echarts-for-react canvas {
+  cursor: pointer;
+}
+
 @media (max-width: 700px) {
   .rc-pagination-options-quick-jumper {
     display: none;
