--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,9 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: Montserrat, Montserrat-Regular, PingFang SC, -apple-system,
-    BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
-    'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'Noto Sans CJK SC',
-    'Noto Sans CJK', 'Source Han Sans', source-han-sans-simplified-c, sans-serif;
+  font-family: Montserrat, Montserrat-Regular, PingFang SC, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'Noto Sans CJK SC', 'Noto Sans CJK',
+    'Source Han Sans', source-han-sans-simplified-c, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
@@ -42,7 +41,6 @@ a {
   color: inherit;
 }
 
-
 @media (max-width: 700px) {
   .rc-pagination-options-quick-jumper {
     display: none;
@@ -53,4 +51,23 @@ a {
   .ant-popover-inner-content {
     padding: 5px !important;
   }
+}
+
+.ant-select-selection-selected-value {
+  color: #000000;
+}
+
+.ant-select-selection {
+  border-color: #b3b3b3 !important;
+  box-shadow: 0 0 0 2px rgba(255, 255, 255, 255) !important;
+}
+
+.ant-select-dropdown-menu-item-active {
+  background: #f5f5f5 !important;
+}
+
+.ant-select-dropdown-menu {
+  color: #000000 !important;
+  font-size: 12px;
+  letter-spacing: 0.6px;
 }
