--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Lato, sans-serif, Montserrat, PingFang SC, -apple-system;
+  font-family: Lato, Montserrat, PingFang SC, -apple-system;
 }
 
 .monospace {
