feat: update chain names on hardfork
1. rename lina to mirana
2. rename aggron to pudge
3. redirect /aggron to /pudge

--- a/src/components/MiranaEasterEgg/index.module.scss
+++ b/src/components/MiranaEasterEgg/index.module.scss
@@ -69,6 +69,7 @@
     justify-content: space-between;
     left: 50%;
     transform: translate(-50%, 0px);
+    z-index: 2;
 
     @media(max-width: 750px){
       width: 215px;
