--- a/src/components/MiranaEasterEgg/index.module.scss
+++ b/src/components/MiranaEasterEgg/index.module.scss
@@ -8,6 +8,7 @@ $backgroudColor: #232323;
   background-image: url('../../assets/ckb_explorer_banner.svg');
   background-repeat: no-repeat;
   background-position: center center;
+  background-size: auto 100%;
   @media(max-width: 750px) {
     background-image: url('../../assets/ckb_explorer_banner_phone.svg');
   }
@@ -16,7 +17,7 @@ $backgroudColor: #232323;
     background-color: $backgroudColor;
     mix-blend-mode: screen;
     position: absolute;
-    bottom: 20%;
+    bottom: 25%;
     display: inline;
     left: 50%;
     transform: translateX(-50%);
@@ -26,12 +27,13 @@ $backgroudColor: #232323;
     .Text {
       margin: 0;
       position: relative;
+      white-space: nowrap;
       text-transform: uppercase;
-      font-size: 48px;
+      letter-spacing: 15px;
+      font-weight:900;
+      font-size: 70px;
+      text-shadow: 0 0 4px currentColor;
 
-      @media(max-width: 750px) {
-        font-size: 24px;
-      }
       
       // Only works on a black background, sorry
       background: black;
@@ -60,6 +62,23 @@ $backgroudColor: #232323;
       &::after {
         mix-blend-mode: difference;
       }
+
+    }
+
+    @media screen and (max-width: 825px) {
+      bottom: 30%;
+      .Text {
+        font-size: 50px;
+      }
+    }
+
+    @media screen and (max-width: 650px) {
+      bottom: 20%;
+      .Text {
+        font-size: 40px;
+        text-align: center;
+        white-space: pre-line;
+      }
     }
 
     // Position our two effect layers
@@ -73,7 +92,7 @@ $backgroudColor: #232323;
 
     // Add the colors
     .Gradient {
-      background: linear-Gradient(45deg, red, blue);
+      background: linear-Gradient(45deg, #00cc9b , lemonChiffon);
       
       // Multiply mode will paint only the white text
       mix-blend-mode: multiply;
@@ -84,8 +103,8 @@ $backgroudColor: #232323;
       
       // These are the lights, color-dodge needs a black bg for optimum effect
       background: 
-        radial-Gradient(circle, white, transparent 25%) 0 0 / 25% 25%, 
-        radial-Gradient(circle, white, black 25%) 50% 50% / 12.5% 12.5%;
+        radial-Gradient(circle, #5ccc00, black 25%) 0 0 / 10% 10%, 
+        radial-Gradient(circle, #5ccc00, transparent 25%) 50% 50% / 10% 10%;
       top: -100%; left: -100%;
       
       // Color dodge gives the lights that shimmer effect
@@ -94,7 +113,7 @@ $backgroudColor: #232323;
 
     @keyframes light {
       100% {
-        transform: translate3d(50%, 50%, 0);
+        transform: translate3d(50%, 80%, 0);
       }
     }
   }
