--- a/src/components/NftItemTransfers/styles.module.scss
+++ b/src/components/NftItemTransfers/styles.module.scss
@@ -2,6 +2,10 @@
   background: #fff;
   border-top-right-radius: 6px;
   padding: 0 15px;
+  ul {
+    margin: 0;
+    margin-bottom: 4px;
+  }
 
   table {
     width: 100%;
@@ -36,7 +40,6 @@
       padding-top: 15px;
       padding-bottom: 15px;
       font-size: 14px;
-      white-space: nowrap;
     }
 
     tr:not(:last-child) {
@@ -47,13 +50,14 @@
   th,
   td {
     text-align: left;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 25px;
+    padding-right: 25px;
+    max-width: 0.25vw;
 
     &:first-child,
     &:last-child {
-      padding-left: 10px;
-      padding-right: 10px;
+      padding-left: 25px;
+      padding-right: 25px;
     }
   }
 
@@ -81,12 +85,11 @@
   }
 
   .noRecord {
-    text-align: center !important;
+    text-align: center;
   }
 
   ul {
     display: none;
-    margin-bottom: 4px;
   }
 
   ul,
