--- a/src/components/NftCollectionInventory/styles.module.scss
+++ b/src/components/NftCollectionInventory/styles.module.scss
@@ -5,6 +5,7 @@
   background: #fff;
   border-top-right-radius: 6px;
   padding: 20px 20px 0;
+  margin-bottom: 4px;
 
   .item {
     display: flex;
