--- a/src/components/NftCollectionOverview/styles.module.scss
+++ b/src/components/NftCollectionOverview/styles.module.scss
@@ -7,8 +7,10 @@
   border-radius: 6px;
 
   .header {
+    display:flex;
     font-size: 20px;
     font-weight: 700;
+    line-height:30px;
     img {
       width: 30px;
       height: 30px;
