--- a/src/pages/NftInfo/styles.module.scss
+++ b/src/pages/NftInfo/styles.module.scss
@@ -30,6 +30,8 @@
     height: 440px;
     flex-shrink: 0;
     margin-right: 32px;
+    border-radius: 16px;
+    object-fit: cover;
   }
 
   .name {
