--- a/src/components/NftHolderList/styles.module.scss
+++ b/src/components/NftHolderList/styles.module.scss
@@ -4,6 +4,7 @@
   padding: 0 15px;
 
   table {
+    position: relative;
     width: 100%;
     margin-bottom: 4px;
   }
@@ -22,7 +23,7 @@
     &:after {
       position: absolute;
       left: -15px;
-      bottom: -2px;
+      top: 44px;
       width: calc(100% + 30px);
       height: 4px;
       content: '';
