--- a/src/components/NftItemTransfers/styles.module.scss
+++ b/src/components/NftItemTransfers/styles.module.scss
@@ -8,6 +8,7 @@
   }
 
   table {
+    position: relative;
     width: 100%;
     margin-bottom: 4px;
   }
@@ -26,7 +27,7 @@
     &:after {
       position: absolute;
       left: -15px;
-      bottom: -2px;
+      top: 44px;
       width: calc(100% + 30px);
       height: 4px;
       content: '';
