--- a/src/pages/NftCollections/styles.module.scss
+++ b/src/pages/NftCollections/styles.module.scss
@@ -22,6 +22,7 @@
   padding: 0 15px;
 
   table {
+    position: relative;
     width: 100%;
     margin-bottom: 4px;
   }
@@ -40,7 +41,7 @@
     &:after {
       position: absolute;
       left: -15px;
-      bottom: -2px;
+      top: 44px;
       width: calc(100% + 30px);
       height: 4px;
       content: '';
