--- a/src/pages/NftInfo/styles.module.scss
+++ b/src/pages/NftInfo/styles.module.scss
@@ -25,6 +25,9 @@
   & > div {
     overflow: hidden;
   }
+  .info {
+    width: 100%;
+  }
   .cover {
     width: 440px;
     height: 440px;
@@ -57,8 +60,11 @@
     }
     dd {
       margin: 0;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
+
   @media screen and (max-width: 800px) {
     flex-direction: column;
     align-items: center;
@@ -78,7 +84,7 @@
     }
     .name,
     .items {
-      width: 320px;
+      width: 100%;
     }
   }
 }
