refactor: BlockOverview no longer uses adaptEllipsis

--- a/src/pages/BlockDetail/styles.module.scss
+++ b/src/pages/BlockDetail/styles.module.scss
@@ -46,3 +46,15 @@
     transform: rotate(0.5turn);
   }
 }
+
+.addressWidthModify {
+  max-width: 80%;
+
+  @media (max-width: 1200px) {
+    max-width: 40%;
+  }
+
+  @media (max-width: 750px) {
+    max-width: 100%;
+  }
+}
