feat: supprot das alias

--- a/src/components/Card/HashCard/styles.module.scss
+++ b/src/components/Card/HashCard/styles.module.scss
@@ -41,3 +41,42 @@
     pointer-events: none;
   }
 }
+
+.hashCardHeaderRight {
+  display: flex;
+  justify-content: space-between;
+  flex: 1;
+  min-width: 0;
+}
+
+.dasAccount {
+  display: flex;
+  align-items: center;
+  background: #fafafa;
+  border: 1px solid #f0f0f0;
+  height: 32px;
+  border-radius: 4px;
+  padding: 0 4px;
+  margin-left: 12px;
+  max-width: 152px;
+  font-size: 16px;
+  font-weight: 500;
+
+  @media (max-width: 750px) {
+    max-width: 90px;
+    font-size: 13px;
+  }
+
+  img {
+    width: 20px;
+    height: 20px;
+    margin-right: 2px;
+    border-radius: 50%;
+  }
+
+  span {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    color: #333;
+  }
+}
