--- a/src/components/TransactionItem/TransactionItemCell/index.module.scss
+++ b/src/components/TransactionItem/TransactionItemCell/index.module.scss
@@ -9,6 +9,7 @@
 
   .text {
     flex: 1;
+    min-width: 0;
   }
 
   .link {
@@ -18,6 +19,7 @@
 }
 
 .addressWidthModify {
+  min-width: 0;
   width: 260px;
 
   @media (max-width: 1440px) {
