--- a/src/components/Tooltip/ComparedToMaxTooltip/styles.module.scss
+++ b/src/components/Tooltip/ComparedToMaxTooltip/styles.module.scss
@@ -21,8 +21,16 @@
         padding: 3px 0;
       }
     }
-    > div:not(:last-child) {
+    > div.inEpoch {
       margin-bottom: 10px;
+      :global(.ant-progress-bg) {
+        background-color: var(--primary-color);
+      }
+    }
+    > div.inChain {
+      :global(.ant-progress-bg) {
+        background-color: #346DFF;
+      }
     }
   }
 }
