feat: optimize tooltip of sizes
1. add unit of size in the tooltip
2. add separate line between size comparison and note

--- a/src/components/Tooltip/ComparedToMaxTooltip/styles.module.scss
+++ b/src/components/Tooltip/ComparedToMaxTooltip/styles.module.scss
@@ -29,8 +29,12 @@
     }
     > div.inChain {
       :global(.ant-progress-bg) {
-        background-color: #346DFF;
+        background-color: #346dff;
       }
     }
+  }
+  hr {
+    margin: 8px 0;
+    opacity: 0.2;
   }
 }
