--- a/src/pages/Script/styles.module.scss
+++ b/src/pages/Script/styles.module.scss
@@ -23,6 +23,9 @@
   width: 100%;
   background-color: #ffffff;
   border-radius: 6px 6px 0 0;
+  :global(.ant-tabs-nav:before) {
+    border-bottom-width: 3px;
+  }
   :global(.ant-tabs-nav-list) {
     margin-left: 40px;
   }
@@ -36,8 +39,9 @@
     font-weight: 500;
   }
   :global(.ant-tabs-ink-bar) {
-    background: linear-gradient(to right, transparent 25%, var(--primary-color) 25%, var(--primary-color) 75%, transparent 75%);
-    height: 4px;
+    background: linear-gradient(to right, transparent 30%, var(--primary-color) 30%, var(--primary-color) 70%, transparent 70%);
+    height: 3px !important;
+    bottom: 3px !important;
   }
 }
 
