--- a/src/pages/Home/index.module.scss
+++ b/src/pages/Home/index.module.scss
@@ -249,3 +249,29 @@
     }
   }
 }
+
+.TableMorePanel {
+  height: 44px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #f8f9fa;
+  border: 0px solid white;
+  border-radius: 0 0 6px 6px;
+  cursor: pointer;
+
+  > span {
+    font-size: 16px;
+    font-weight: 500;
+    color: var(--primary-color);
+  }
+
+  &:hover {
+    background: var(--primary-color);
+
+    > span {
+      color: white;
+    }
+  }
+}
