fix: use `QueryResult` and some bugs fix

--- a/src/pages/Script/styles.module.scss
+++ b/src/pages/Script/styles.module.scss
@@ -55,7 +55,13 @@
   }
 }
 
-.scriptTransactionsPagination {
+.scriptPagination {
   margin-top: 4px;
   width: 100%;
+}
+
+.codeHashMessagePanel {
+  display: flex;
+  align-items: center;
+  min-width: 0;
 }
