--- a/src/pages/Address/styles.module.scss
+++ b/src/pages/Address/styles.module.scss
@@ -12,6 +12,37 @@
 
 .transactionTitleCard {
   height: 80px;
+
+  @media (max-width: 750px) {
+    height: 124px;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0;
+    > div {
+      display: flex;
+      align-items: center;
+      padding: 0 12px;
+      height: 56px;
+    }
+    > div:last-child {
+      width: 100%;
+      order: 3;
+      > div {
+        width: 100%;
+        > label {
+          width: 50%;
+        }
+      }
+    }
+    &:after {
+      content: ' ';
+      order: 2;
+      background: #ededed;
+      height: 4px;
+      width: 100%;
+    }
+  }
+
 }
 
 .layoutButtons {
@@ -56,12 +87,22 @@
   line-height: 19px;
   color: #333333;
   > div {
-    width: calc(100% / 6);
     &:first-child {
-      width: calc(100% / 3);
+      width: 28%;
+    }
+    &:nth-child(2) {
+      width: 13%;
+    }
+    &:nth-child(3) {
+      width: 20%;
+    }
+    &:nth-child(4) {
+      width: 20%;
     }
     &:last-child {
+      width: 19%;
       text-align: right;
+      padding: 0;
     }
   }
 }
