--- a/src/components/TransactionItem/TransactionLiteItem/index.module.scss
+++ b/src/components/TransactionItem/TransactionLiteItem/index.module.scss
@@ -29,14 +29,71 @@
     }
 
     > div {
-      width: calc(100% / 6);
-      padding: 0 16px 0 0;
+      padding: 0 6px 0 0;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 19px;
+      color: #333333;
       &:first-child {
-        width: calc(100% / 3);
+        width: 28%;
+        padding-right: 20px;
+        @media (min-width: 1200px) {
+          padding-right: 50px;
+        }
+      }
+      &:nth-child(2) {
+        width: 13%;
+      }
+      &:nth-child(3) {
+        width: 20%;
+      }
+      &:nth-child(4) {
+        width: 27%;
+        > span:last-child {
+          margin-left: 16px;
+        }
       }
       &:last-child {
+        width: 12%;
         text-align: right;
         padding: 0;
+      }
+    }
+  }
+  @media (max-width: 750px) {
+    padding: 0 16px;
+    margin-bottom: 4px;
+    .transactionLiteRow {
+      flex-direction: column;
+      border-top: none;
+      padding: 0;
+      > div {
+        width: 100% !important;
+        padding: 16px 0 !important;
+        > div:first-child {
+          color: #666666;
+          margin-bottom: 8px;
+        }
+        &:not(:first-child) {
+          border-top: 1px solid #f0f0f0;
+        }
+      }
+      > div:first-child {
+        > a > div {
+          padding-right: 38px;
+        }
+      }
+      > div:nth-child(4) {
+        > span:last-child {
+          margin-left: 24px;
+        }
+      }
+      > div:last-child {
+        text-align: left;
+        width: 100%;
+        > div:last-child > div {
+          justify-content: flex-start;
+        }
       }
     }
   }
