--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto");
+@import url("https://fonts.googleapis.com/css?family=JetBrains+Mono");
+
 body {
   --primary-color: #00cc9b;
   --navbar-height: 64px;
