feat: localized fonts

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto");
-@import url("https://fonts.googleapis.com/css?family=JetBrains+Mono");
+@import './assets/fonts/fonts.css';
 
 body {
   --primary-color: #00cc9b;
@@ -14,13 +13,6 @@ body {
 
 body[data-chain-type='testnet'] {
   --primary-color: #9a2cec;
-}
-
-@font-face {
-  font-family: 'Lato';
-  src: local('Lato'), url('./assets/fonts/Lato-Regular.ttf') format('truetype');
-  font-weight: 300;
-  font-style: normal;
 }
 
 * {
