--- a/src/pages/Script/styles.module.scss
+++ b/src/pages/Script/styles.module.scss
@@ -9,9 +9,6 @@
   align-items: center;
   margin-top: 25px;
   margin-bottom: 40px;
-  * {
-    font-family: Roboto, serif;
-  }
 
   @media (max-width: 750px) {
     margin: 0;
@@ -43,40 +40,59 @@
     font-weight: 500;
   }
   :global(.ant-tabs-ink-bar) {
-    background: linear-gradient(to right, transparent 30%, var(--primary-color) 30%, var(--primary-color) 70%, transparent 70%);
+    background: linear-gradient(
+      to right,
+      transparent 30%,
+      var(--primary-color) 30%,
+      var(--primary-color) 70%,
+      transparent 70%
+    );
     height: 3px !important;
     bottom: 3px !important;
   }
 }
 
+.scriptCellsPanel,
 .scriptTransactionsPanel {
-  width: 100%;
-  padding: 0 40px;
-
-  thead th {
-    padding: 5px 0 22px;
-    background: #ffffff;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 19px;
-    &::before {
-      display: none;
+  table {
+    width: 100%;
+    line-height: 1.2;
+    tr {
+      border-bottom: 1px solid #e5e5e5;
+    }
+    tbody tr:last-child {
+      border-bottom: none;
+    }
+    th {
+      font-size: 1rem;
+      font-weight: 500;
+      color: #333;
+    }
+    th,
+    td {
+      white-space: nowrap;
+      padding: 22px 0;
+      user-select: none;
+      cursor: default;
+      &:nth-child(3) {
+        padding-left: 22px;
+        div {
+          justify-content: flex-start;
+        }
+      }
+    }
+    td:first-child {
+      max-width: 25vw;
+    }
+    a {
+      color: var(--primary-color);
     }
   }
-
-  tbody td {
-    padding: 22px 0;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 16px;
-  }
-
-  :global(.transaction_item__hash) {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 18px;
-    font-family: "JetBrains Mono", serif;
-    color: var(--primary-color);
+}
+.scriptCellsPanel {
+  padding: 0 40px;
+  @media screen and (max-width: 1200px) {
+    padding: 0 10px;
   }
 }
 
@@ -106,4 +122,8 @@
   display: flex;
   align-items: center;
   min-width: 0;
+}
+
+.hashType {
+  text-transform: capitalize;
 }
